# Labs

./: .gitignore  README.md  deteccao_facial.py  main.py  pyproject.toml
30-Days-code/: day03.py  day04.py  day06.py  day07.py  day08.py  day12.py
Banco_NoSQL/: atividade_pratica.txt
Blockchain/: main.py
By Numbi/: Teste1.ipynb
C-Jovem/: of-8.ipynb
Evasao_Escolar/: Evasão_escolar.ipynb  Teste1.ipynb
Gradient_Boosting/: Gradient_Boosting_XGBoost.ipynb
Graficos_Plotly/: graficos.ipynb
Introducao_MongoDB/: Cosulta.dbclient-js  README.md  atualizando.dbclient-js  conexao_com_python.ipynb  criacao.dbclient-js  excluido.dbclient-js  inserindo.dbclient-js
Predict students/: students.ipynb
PrevissaoAlunos/: alunos.ipynb
Programacao_Para_Big_Data/: ProgramacaoParaBigData.ipynb
Projeto_Final_IoT/: MQTT.py
Projeto_House_Prices/: house_price.ipynb
SQL_MySQL/: 0.0_Criando_a_tabela_users.sql  0.1_Criando_a_tabela_roles.sql  0.2_Criando a_tabela_users_roles.sql  0.3_Criando_a_tabela_profiles.sql  0.4_Colunas_com_tipo_datetime_(created_at_e_updated_at).sql  0.5_SQL_INSERT.sql  0.6_Alias.sql  0.7_Filtrar_os_registros.sql  0.8_Dados_ficticios.sql  0.9_Between.sql  1.0_Select_IN.sql  1.1_Select_LIKE.sql  1.2_Select_ORDER.sql  1.3_Select_LIMIT_OFFSET.sql  1.4_INSERT_com_SELECT.sql  1.5_Delete.sql  1.6_Update.sql  1.7_SELECT _mais_de_uma_tabela.sql  1.8_INNER_JOIN.sql  1.9_LEFT_JOIN.sql  2.0_RIGHT_JOIN.sql  2.1_ RAND_ROUND.sql
SQLite/: CriandoDB.py  db.sqlite3  select.py
Tabelas-Excel/: ATV2.ipynb  ATV2.py  balanco_e_fluxo_de_caixa_organizado.xlsx  (+2 more)
(+50 files in other folders)
