[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.138.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pingouin>=0.6.1",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
